--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
 body {
     box-sizing: border-box;
 }
@@ -6,4 +8,10 @@ body {
     box-sizing: inherit;
     margin: 0px;
     padding: 0px;
+    font-family: Roboto, Arial, sans-serif;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
 }
