--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,3 +15,8 @@ a{
     color: inherit;
     text-decoration: none;
 }
+
+.move {
+    transform: translateX(480px);
+    background-color: black;
+}
