--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
+html, body, #root {
+    height: auto;
+}
+
 body {
     box-sizing: border-box;
 }
