--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 html, body, #root {
-    height: auto;
+    height: max-content;
+    background-color: #f9f9f9;
 }
 
 body {
