Complete reactive web 동영상 프레임 파트 및 영상 설명란/댓글란 반응형 웹 기능 구현 완료

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 html, body, #root {
+    width: 100vw;
     height: max-content;
     background-color: #f9f9f9;
 }
