Complete copy url to clipboard 동영상 url 복사 및 현재 시간 부터 재생 가능한 url 복사하는 기능 추가 완료

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,6 +22,7 @@ a{
     text-decoration: none;
 }
 
-.move {
-    background-color: none;
+.for-clipboard{
+    opacity: 0;
+    position: absolute;
 }
