--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,9 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 
 html, body, #root {
-    width: 100vw;
-    height: max-content;
-    background-color: #f9f9f9;
+    height: 100%;
 }
 
 body {
